# pico-filesystem

./: .gitignore  CMakeLists.txt  README.md  licence.txt
device/: CMakeLists.txt  README.md  ioctl.h  pfs_dev.c  pfs_dev_gdd.c  pfs_dev_gdd.h  pfs_dev_gio.c  pfs_dev_gio.h  pfs_dev_kbd.c  pfs_dev_kbd.h  pfs_dev_keymap.h  pfs_dev_keymap_uk.c  pfs_dev_keymap_uk.h  pfs_dev_tty.c  pfs_dev_tty.h  pfs_dev_uart.c  pfs_dev_uart.h  sconfig.h
flash/: CMakeLists.txt  ffs_pico.c  ffs_pico.h  pfs_ffs.c
pfs/: CMakeLists.txt  dirent.h  pfs.h  pfs_base.c  pfs_dev_tty.c  pfs_dev_tty.h  pfs_private.h  pfs_stdio.c  pname.c  pname.h
sdcard/: CMakeLists.txt  ff_disk.c  ffconf.h  pfs_fat.c  sd_spi.h  sd_spi.pio  sd_spi2.c
serial/: CMakeLists.txt  pfs_serial.c  picoser.c  picoser.h
test/: CMakeLists.txt  README.md  kbd_test.c  pfs_test.c
